Implementing a Right align fix for totals applied a a-label-total class within the js inserted a-label-total definition in scss file (a-label) inserted a-label-total definition in css file (a-label) as I don't have the transform mechanism

--- a/Survey/source/styles/a-label.scss
+++ b/Survey/source/styles/a-label.scss
@@ -17,6 +17,10 @@ th .a-label-option {
     margin: 0;
 }
 
+.a-label-total {
+  text-align: right;
+}
+
 .focused {
     * {
         outline: none;
